(env
 (dev
  (flags
   (:standard -warn-error -A))))

(executable
 (public_name gamelle_example)
 (name gamelle_example_bin)
 (modules gamelle_example_bin)
 (libraries gamelle_example gamelle.sdl))

(rule
 (target gamelle_example_bin.ml)
 (action
  (with-stdout-to
   gamelle_example_bin.ml
   (run echo "include Gamelle_example"))))

(executable
 (name gamelle_example_js)
 (modules gamelle_example_js)
 (modes js)
 (libraries gamelle_example gamelle.jsoo))

(rule
 (target gamelle_example_js.ml)
 (action
  (with-stdout-to
   gamelle_example_js.ml
   (run echo "include Gamelle_example"))))

(rule
 (target gamelle_example.html)
 (deps gamelle_example.template.html gamelle_example_js.bc.js)
 (action
  (with-stdout-to
   gamelle_example.html
   (run
    %{bin:gamelle}
    html
    --template=gamelle_example.template.html
    --script=gamelle_example_js.bc.js))))
